kubernetes/pr-agent/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pr-agent
  namespace: pr-agent
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: pr-agent
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: pr-agent
